content/v1.3.0/en/api/campaign-ext/TheSpyPartyIssueQuest.md
---
title: "TheSpyPartyIssueQuest"
description: "Auto-generated class reference for TheSpyPartyIssueQuest."
---
# TheSpyPartyIssueQuest

**Namespace:** SandBox.Issues
**Module:** SandBox.Issues
**Type:** `public class TheSpyPartyIssueQuest`
**Base:** none
**File:** `SandBox/Issues/TheSpyPartyIssueQuestBehavior.cs`

## Overview

`TheSpyPartyIssueQuest` lives in `SandBox.Issues` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `SandBox.Issues` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `AlternativeSolutionScaleFlags` | `public override IssueBase.AlternativeSolutionScaleFlag AlternativeSolutionScaleFlags { get; }` |
| `IsThereAlternativeSolution` | `public override bool IsThereAlternativeSolution { get; }` |
| `IsThereLordSolution` | `public override bool IsThereLordSolution { get; }` |
| `AlternativeSolutionBaseNeededMenCount` | `public override int AlternativeSolutionBaseNeededMenCount { get; }` |
| `IssueBriefByIssueGiver` | `public override TextObject IssueBriefByIssueGiver { get; }` |
| `IssueAcceptByPlayer` | `public override TextObject IssueAcceptByPlayer { get; }` |
| `IssueQuestSolutionExplanationByIssueGiver` | `public override TextObject IssueQuestSolutionExplanationByIssueGiver { get; }` |
| `IssuePlayerResponseAfterAlternativeExplanation` | `public override TextObject IssuePlayerResponseAfterAlternativeExplanation { get; }` |
| `IssueAlternativeSolutionExplanationByIssueGiver` | `public override TextObject IssueAlternativeSolutionExplanationByIssueGiver { get; }` |
| `IssueQuestSolutionAcceptByPlayer` | `public override TextObject IssueQuestSolutionAcceptByPlayer { get; }` |
| `Title` | `public override TextObject Title { get; }` |
| `Description` | `public override TextObject Description { get; }` |
| `IssueAlternativeSolutionAcceptByPlayer` | `public override TextObject IssueAlternativeSolutionAcceptByPlayer { get; }` |
| `IssueDiscussAlternativeSolution` | `public override TextObject IssueDiscussAlternativeSolution { get; }` |
| `IssueAlternativeSolutionResponseByIssueGiver` | `public override TextObject IssueAlternativeSolutionResponseByIssueGiver { get; }` |
| `IssueAlternativeSolutionSuccessLog` | `public override TextObject IssueAlternativeSolutionSuccessLog { get; }` |
| `IsRemainingTimeHidden` | `public override bool IsRemainingTimeHidden { get; }` |
| `Title` | `public override TextObject Title { get; }` |

## Key Methods

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** **Purpose:** Registers events with the current system so it can later be observed or dispatched.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
theSpyPartyIssueQuest.RegisterEvents();
```

### OnCheckForIssue
`public void OnCheckForIssue(Hero hero)`

**Purpose:** **Purpose:** Invoked when the check for issue event is raised.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
theSpyPartyIssueQuest.OnCheckForIssue(hero);
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** **Purpose:** Synchronizes data across the relevant contexts or systems.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
theSpyPartyIssueQuest.SyncData(dataStore);
```

### AutoGeneratedStaticCollectObjectsSuspectNpc
`public static void AutoGeneratedStaticCollectObjectsSuspectNpc(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsSuspectNpc logic.

```csharp
// Static call; no instance required
TheSpyPartyIssueQuest.AutoGeneratedStaticCollectObjectsSuspectNpc(o, collectedObjects);
```

### GetAlternativeSolutionSkill
`public override ValueTuple<SkillObject, int> GetAlternativeSolutionSkill(Hero hero)`

**Purpose:** **Purpose:** Reads and returns the alternative solution skill value held by the this instance.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.GetAlternativeSolutionSkill(hero);
```

### AlternativeSolutionCondition
`public override bool AlternativeSolutionCondition(out TextObject explanation)`

**Purpose:** **Purpose:** Executes the AlternativeSolutionCondition logic.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.AlternativeSolutionCondition(explanation);
```

### IsTroopTypeNeededByAlternativeSolution
`public override bool IsTroopTypeNeededByAlternativeSolution(CharacterObject character)`

**Purpose:** **Purpose:** Determines whether the this instance is in the troop type needed by alternative solution state or condition.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.IsTroopTypeNeededByAlternativeSolution(character);
```

### DoTroopsSatisfyAlternativeSolution
`public override bool DoTroopsSatisfyAlternativeSolution(TroopRoster troopRoster, out TextObject explanation)`

**Purpose:** **Purpose:** Executes the DoTroopsSatisfyAlternativeSolution logic.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.DoTroopsSatisfyAlternativeSolution(troopRoster, explanation);
```

### GetFrequency
`public override IssueBase.IssueFrequency GetFrequency()`

**Purpose:** **Purpose:** Reads and returns the frequency value held by the this instance.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.GetFrequency();
```

### IssueStayAliveConditions
`public override bool IssueStayAliveConditions()`

**Purpose:** **Purpose:** Creates or raises stay alive conditions.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.IssueStayAliveConditions();
```

### IsLocationTrackedByQuest
`public override GameMenuOption.IssueQuestFlags IsLocationTrackedByQuest(Location location)`

**Purpose:** **Purpose:** Determines whether the this instance is in the location tracked by quest state or condition.

```csharp
// Obtain an instance of TheSpyPartyIssueQuest from the subsystem API first
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
var result = theSpyPartyIssueQuest.IsLocationTrackedByQuest(location);
```

## Usage Example

```csharp
// Typically call this after obtaining an instance from the subsystem API
TheSpyPartyIssueQuest theSpyPartyIssueQuest = ...;
theSpyPartyIssueQuest.RegisterEvents();
```

## See Also

- [Area Index](../)